--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,7 +19,7 @@ h1 { font-weight: 600; }
   font-weight: 600;
   letter-spacing: 10px;
   margin: 0;
-  padding: 10px;
+  padding: 20px 10px 10px;
 }
 
 .friends-page h1 a {
@@ -27,10 +27,6 @@ h1 { font-weight: 600; }
   float: right;
   margin-left: -25px;
   padding: 0;
-}
-
-.friends-page .button-block {
-
 }
 
 .friends-page-content {
@@ -45,11 +41,7 @@ h1 { font-weight: 600; }
 .addfriends .tabs {
   background: none;
   color: black;
-  top: 42px;
-}
-
-.addfriends .pane {
-  padding-top: 93px;
+  padding: 0;
 }
 
 .addfriends .tab-item .icon {
@@ -61,8 +53,7 @@ h1 { font-weight: 600; }
 }
 
 .search-friends-content {
-  bottom: 0;
-  top: 137px;
+  top: 44px !important;
 }
 
 .evince-list li {
